--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "weekend-project-backend",
+  "name": "majdoor",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "firebase-admin": "^12.4.0",
-    "mysql2": "^3.11.0",
-    "sequelize": "^6.37.3"
+    "express": "^4.21.0",
+    "express-validator": "^7.2.0",
+    "firebase-admin": "^12.4.0"
   }
 }
